# AutoMD

./: README.md  pyproject.toml  requirements.txt
auto-md/: acad_api.py  active_x_test.py  component.py  component_testing.py  cpwblocks.py  resonator.py  sample_outline.py  sections.py  shapes.py  transmissionline.py  utils.py
auto-md/components/: component.py  resonator.py
autocadmd/: acad_api.py  component.py  design.py  resonator.py  sample_outline.py  sections.py  shapes.py  transmissionline.py  utils.py
testing/: active_x_test.py  component_testing.py
